# FlashQwen

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CMakeLists.txt  Makefile  README.md  README.zh-CN.md  go.mod
api/: engine.go  go.mod  go.sum  handlers.go  main.go  openai.go  template.go  tools.go
api/pb/: inference.pb.go  inference_grpc.pb.go
cmd/flashqwen/: bench.go  chat.go  common.go  main.go  progress.go  serve.go
cmd/fqbench/: main.go
docs/: attention-vs-flashattention.md  optimization.md  optimization.zh.md
docs/exps/: 00-baseline-and-scheduler.md  2026-06-19-decode-profile.md  2026-06-20-journey-replay.md  2026-06-20-journey.csv  2026-06-20-vllm-baseline-prefix-cache-deprecated.md  README.md  s03-bf16-cublas-fa2.md  s04-tensorcore-gqa-reverted.md  s05-kernel-fusion.md  s06-flashdecoding.md  s07-wmma-prefill.md  s08-prefill-occupancy.md  s10-max-batch-tokens.md  s11-cuda-graphs-reverted.md  s12-gqa-flashdecoding.md  s14-activation-scratch.md  s15-prefix-caching.md  s16-prefill-mma-rewrite.md  s17-comprehensive-comparison.md
engine/: CMakeLists.txt
engine/src/: args.cc  args.cpp  args.h  args.hpp  attn_cute.cu  attn_cute.h  benchmark.cpp  benchmark.hpp  block_allocator.h  block_pool.cu  block_pool.hpp  chat.cpp  chat.hpp  chatml.cpp  cuda_helpers.h  engine_loop.cpp  engine_loop.hpp  errors.h  errors.hpp  generate.cpp  generate.hpp  grpc_server.cpp  grpc_server.hpp  grpc_service.cc  grpc_service.cpp  grpc_service.h  grpc_service.hpp  grpc_sink.h  grpc_sink.hpp  kernels.cu  kernels.cuh  kv_cache.cu  kv_cache.cuh  kv_cache.hpp  kv_layout.h  kv_store.cu  kv_store.h  log.h  log.hpp  main.cc  (+25 more)
engine/src/model/: prompt.hpp  tokenizer.cpp
internal/bench/: driver.go  httpclient.go  metrics.go  run.go  workload.go
internal/chat/: chat.go  stream.go  template.go  types.go
internal/chatml/: chatml.go  render.go  stream.go  stream_test.go  types.go
internal/engine/: client.go  generate.go  generate_test.go  types.go
internal/enginepb/: engine.pb.go  engine_grpc.pb.go
internal/hub/: cache.go  download.go  download_test.go  hub.go  hub_test.go
internal/llm/: service.go  types.go
internal/openai/: server.go  types.go
internal/server/: completions.go  server.go  types.go
internal/supervisor/: supervisor.go
internal/tokenizer/: tokenizer.go  tokenizer_test.go
proto/: engine.proto  inference.proto
scripts/: lint.sh
src/: benchmark.cpp  benchmark.hpp  chat.cpp  chat.hpp  chat_template.cpp  chat_template.hpp  cli.cpp  cli.hpp  config.hpp  generate.cpp  grpc_server.cpp  json.hpp  kernels.cu  kernels.cuh  main.cpp  model.cu  model.hpp  prompt.cpp  safetensors.cpp  sampler.cpp  sampler.hpp  scheduler.cpp  scheduler.hpp  server.cpp  server.hpp  tokenizer.cpp  tokenizer.hpp
